Changelog
=========

8.2.dev0 - (unreleased)
-----------------------

8.1 - (2017-12-12)
------------------
* Change: Replace eeacms/zptlint with eeacms/plone-test:4 zptlint
  [avoinea refs #90415]

8.0 - (2017-11-07)
------------------
* Change: Remove Sphinx generated documentation
  [petchesi-iulian refs #88212]

7.9 - (2017-05-22)
------------------
* Change: fixed PyLint warnings and errors
  [valipod refs #84949]

7.8 - (2017-05-15)
------------------
* Change: fixed PyLint warnings and errors
  [eduard-fironda refs #84949]

7.7 - (2017-04-24)
------------------
* Change: updated package information
  [eduard-fironda]

7.6 - (2016-05-19)
------------------
* Bug fix: Fix pylint warnings
  [chiridra refs #71940]

7.5 - (2015-08-18)
------------------
* Change: Auto-include zcml within plone context in order to make this package
  work without having to add it within buildout zcml directive.
  [avoinea]
* Feature: Implemented support for pylibmc
  [razvanchitu refs #27571]

7.4 - (2015-03-17)
------------------
* Change: Switched to curl in the jenkins build install script
  [olimpiurob refs #22402]
* Change: Changed fetch url for jenkins build install script to the install
  script from the main EEA CPB repository
  [olimpiurob refs #22402]

7.3 - (2014-12-23)
------------------
* Bug fix: fixed libevent download made by the buildout
  [ghicaale refs #21453]

7.2 - (2014-11-20)
------------------
* Change: Added InvalidateEverything event to be able to invalidate memcache and
  varnish instead of adding subscribers on ObjectModifiedEvent
  [voineali refs #21852, #21850, #21851]
* Change: Migrate cache invalidation form to plone.z3cform in order to easily
  extend it outside this package
  [voineali refs #21630]

7.1 - (2014-10-01)
------------------
* Feature: invalidate Memcache now appear on cache form as one of the options.
  [ghicaale refs #21143]
* Feature: created handler to invalidate only Varnish.
  [ghicaale refs #21143]